--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
     </noscript>
     <div id="root"></div>
     <script src="/js/app.js"></script>
+    <link rel="stylesheet" href="http://localhost:3000/styles.css">
 </body>
 </html>
