--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Barebones Typescript/React/Express</title>
+    <title>TypeScript Chirper</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
@@ -10,6 +10,5 @@
     </noscript>
     <div id="root"></div>
     <script src="/js/app.js"></script>
-    <link rel="stylesheet" href="http://localhost:3000/styles.css">
 </body>
 </html>
